# fpp-personal-parsers

./: README.md  dune-project  fpp_personal_parsers.opam  notes.md
expr_parser/: dune  parser.ml
fpp_framework/: basic_parser.ml  combinators.ml  dune  parser.ml  parser_base.ml  strings.ml  types.ml
res/tego/: addOne.tgo  fib.tgo  fibList.tgo  joinUnit.tgo  list.tgo  primes.tgo  sum.tgo
tego_generator/: ast.ml  dune  weights.ml
tego_parser/: ast.ml  dune  parser.ml
test/: dune  test_fpp_framework.ml  test_tego_parser.ml
